src/objects/AWS_Task__c.object
<CustomObject>
    <description>Start the aws task jobs</description>
    <fields>
        <fullName>Process_Request__c</fullName>
        <label>Process Request</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Response__c</fullName>
        <label>Process Response</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <description>Process Status indicates the process level from Initialization to Finishing</description>
        <inlineHelpText>Process Status indicates the process level from Initialization to Finishing</inlineHelpText>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End</fullName>
                </value>
                <value>
                    <fullName>Initialization</fullName>
                </value>
                <value>
                    <fullName>Email Creation</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Email Blast</fullName>
                </value>
                <value>
                    <fullName>Email Deletion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Task dedicated to the EBC campaigns</description>
        <inlineHelpText>Task dedicated to the EBC campaigns</inlineHelpText>
        <label>Task Campaign</label>
        <referenceTo>EBC_Campaign__c</referenceTo>
        <relationshipLabel>AWS Tasks</relationshipLabel>
        <relationshipName>AWS_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <description>Will trigger the campaign process to Collect, Delete, Send and Test Emails</description>
        <inlineHelpText>Will trigger the campaign process to Collect, Delete, Send and Test Emails</inlineHelpText>
        <label>Task_Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COLLECT EMAILS</fullName>
                </value>
                <value>
                    <fullName>DELETE EMAILS</fullName>
                </value>
                <value>
                    <fullName>SEND EMAILS</fullName>
                </value>
                <value>
                    <fullName>TEST CAMPAIGN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AWS Task</label>
    <nameField>
        <displayFormat>TK-{0000000}</displayFormat>
        <label>AWS_Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>